@@ -1,3 +1,5 @@
+The MIT License
+
 Copyright (c) 2010 Rodolfo Liviero
 
 Permission is hereby granted, free of charge, to any person obtaining
