@@ -4,16 +4,48 @@
 
  gem install vraptor-scaffold --pre
  
-== Usage
+== Getting Started
 
- vraptor new store
- cd store
- vraptor scaffold product name:string
- mvn compile war:inplace jetty:run
+ At the command line client:
  
- http://localhost:8080/products
+ - vraptor new myapp
+ - Change directory into myapp
+ - vraptor scaffold product name:string value:double
+ - vraptor start 
+ - Go http://localhost:8080/products
+ 
+== Werb Server
 
-== Supported Java Type
+ The default web server is jetty but you can import the project in your Favorite ide and run your project with tomcat or jboss as for example.
+
+== Architecture Overview
+ When you run vraptor new command will be created a java web application with vraptor3, jpa(hibernate), freemarker, sitemesh, maven2, and jquery.
+ 
+ Vraptor3 = Controller
+ Jpa = ORM
+ Freemarker = Template Engine
+ Sitemesh = Decorator
+ Maven2 = Project Management 
+ Jquery = JavaScript
+    
+ Tests will use junit, mockito and dbunit.
+ 
+ src/main/java/app/controllers
+    Controllers will be placed here.
+ src/main/java/app/models
+    Models will be placed here.
+ src/main/webapp 
+    webapp root folder.
+ src/main/webapp/decorators
+    Decorators will be placed here.
+ src/main/webapp/javascripts
+    JavaScript will be placed here.
+ src/main/webapp/stylesheets
+    CSS will be placed here.
+ src/main/webapp/WEB-INF/views
+    Views will be placed here. Ex: products/index.ftl
+
+== Supported Java Types
  The only supported types for now are: boolean, double, float, short, integer, long and string.
  
 == Dependencies
@@ -27,10 +59,10 @@
 - Add tests for it.
 - Send me a pull request.
 
-== Authors
+== Author
 
 -- Rodolfo Liviero [mailto:rodolfoliviero@gmail.com]
 
 == Copyright
 
- Copyright (c) 2010 Rodolfo Liviero. See LICENSE for details.
+Copyright (c) 2010 Rodolfo Liviero. See LICENSE for details.
