@@ -1,4 +1,3 @@
-change log4j.xml to lo4j.properties
 display name web.xml with app name
 create others persistence unit(maven profile?)
 new java keyword(how to call new method in controller?)
@@ -9,3 +8,4 @@ relationship support(many-to-one, one-to-many, many-to-many)
 active record is possible?
 generators help
 usage file to each generator
+gem description
