@@ -1,0 +1,4 @@
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss,SSS} %5p [%-20c{1}] %m%n
+log4j.rootLogger=info, console
