@@ -1,20 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<log4j:configuration xmlns:log4j="http://jakarta.apache.org/log4j/">
-
-	<appender name="CONSOLE" class="org.apache.log4j.ConsoleAppender">
-		<layout class="org.apache.log4j.PatternLayout">
-			<param name="ConversionPattern" value="%d{HH:mm:ss,SSS} %5p [%-20c{1}] %m%n" />
-		</layout>
-	</appender>
-	
-	<logger name="org.hibernate">
-		<level value="WARN" />
-		<appender-ref ref="CONSOLE" />
-	</logger>
-
-	<root>
-		<priority value="INFO" />
-		<appender-ref ref="CONSOLE" />
-	</root>
-
-</log4j:configuration>
