@@ -12,6 +12,8 @@
 			<property name="hibernate.connection.url" value="jdbc:hsqldb:file:tmp/devdb" />
 			<property name="hibernate.hbm2ddl.auto" value="update" />
 			<property name="hibernate.query.substitutions" value="true=1, false=0"/>
+			<property name="hibernate.show_sql" value="true" />
+			<property name="hibernate.format_sql" value="true" />
 		</properties>
 	</persistence-unit>
 
