@@ -2,6 +2,10 @@ require File.expand_path(File.dirname(__FILE__) + "/../spec_helper")
 
 describe VraptorScaffold::Main do
   
+   before(:each) do
+     #self.stub!(:exec)
+    end 
+  
   context "new application" do
     before(:each) do
       @project_name = "vraptor-scaffold"
@@ -32,6 +36,13 @@ describe VraptorScaffold::Main do
     it "should call scaffold generator" do
       @generator.should_receive(:build)
       VraptorScaffold::Main.execute(@args)
+    end
+  end
+  
+  context "web server" do
+    it "should start server when typed start" do
+      VraptorScaffold::Main.should_receive(:exec).with("mvn compile war:inplace jetty:run")
+      VraptorScaffold::Main.execute(["start"])
     end
   end
 end
